--- a/.hintrc
+++ b/.hintrc
@@ -11,11 +11,6 @@
       }
     ],
     "disown-opener": "off",
-    "axe/text-alternatives": [
-      "default",
-      {
-        "image-alt": "off"
-      }
-    ]
+    "axe/text-alternatives": "off"
   }
 }
